--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./assets/variables.scss";
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $blue-color;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: $blue-alt-color;
+}
+
+*:focus {
+  outline: none;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
