--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -65,6 +65,7 @@
         <div class="wraper d-grid ">
             <div class="welcome bg-white text-sm-center text-md-start d-sm-block d-md-">
                 <h2>welcom</h2>
+                <h2>welcom2</h2>
             </div>
         </div>
     </div>
