finished wrapper creation

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -64,7 +64,17 @@
         </h1>
         <div class="wraper d-grid ">
             <div class="welcome bg-white text-sm-center text-md-start d-sm-block d-md-">
-                <h2>welcom</h2>
+                <div class="intro d-flex justify-content-between">
+                    <div>
+                        <h2 class="m-0">
+
+                        </h2>
+                        <p class="">
+
+                        </p>
+                    </div>
+                    <img src="" alt="">
+                </div>
             </div>
         </div>
     </div>
