finshed the welcome HTML structure

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -67,13 +67,20 @@
                 <div class="intro d-flex justify-content-between">
                     <div>
                         <h2 class="m-0">
-
+                            welcome
                         </h2>
-                        <p class="">
-
+                        <p>
+                            Hamza
                         </p>
                     </div>
-                    <img src="" alt="">
+                    <img src="https://via.placeholder.com/200/red" alt="">
+                </div>
+                <div class="body text-center d-flex">
+                    <div>
+                        Hamaza Noah <span class="d-block">Developer</span>
+                    </div>
+                    <div>80 <span class="d-block">Projects</span></div>
+                    <div>8500$ <span class="d-block">Earned</span></div>
                 </div>
             </div>
         </div>
