finished the content of the app-welcome

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -75,13 +75,15 @@
                     </div>
                     <img src="https://via.placeholder.com/200/red" alt="">
                 </div>
-                <div class="body text-center d-flex">
+                <img class="avatar" src="https://via.placeholder.com/32" alt="img">
+                <div class="body text-center d-sm-block d-md-flex">
                     <div>
                         Hamaza Noah <span class="d-block">Developer</span>
                     </div>
                     <div>80 <span class="d-block">Projects</span></div>
                     <div>8500$ <span class="d-block">Earned</span></div>
                 </div>
+                <a href="#" class="visit d-block fs-14 btn">Profile</a>
             </div>
         </div>
     </div>
