added the targets widget component with structure

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,6 +18,7 @@
         <div class="wraper d-grid ">
             <app-welcom></app-welcom>
             <app-quick-draft></app-quick-draft>
+            <app-tagets-widget></app-tagets-widget>
         </div>
     </div>
 </div>
