adding the right pictures to the component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,14 +9,14 @@
                 <span class="notification position-relative">
                     <i class="fa-regular fa-bell fa-lg"></i>
                 </span>
-                <img src="https://via.placeholder.com/32" alt="img">
+                <img src="assets/images/avatar.png" alt="img">
             </div>
         </div>
         <h1 class="position-relative">
             Dashboard
         </h1>
         <div class="wraper d-grid ">
-            <app-welcom></app-welcom>
+            <app-welcome></app-welcome>
             <app-quick-draft></app-quick-draft>
             <app-tagets-widget></app-tagets-widget>
         </div>
