--- a/src/app/quick-draft/quick-draft.component.html
+++ b/src/app/quick-draft/quick-draft.component.html
@@ -4,7 +4,7 @@
     </h2>
     <p class="">Write a draft for your ideas</p>
     <form action="">
-        <input class="d-block w-100 border-0" type="text">
+        <input class="d-block w-100 border-0" placeholder="Title" type="text">
         <textarea class="d-block w-100 border-0 resize-none" placeholder="Your Thoughts"></textarea>
         <input class="save d-block border-0 text-white btn ml-auto" type="submit" value="Save">
     </form>
