--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -8,9 +8,9 @@
                 Hamza
             </p>
         </div>
-        <img src="https://via.placeholder.com/200/red" alt="">
+        <img src="../../assets/images/welcome.png" alt="">
     </div>
-    <img class="avatar" src="https://via.placeholder.com/32" alt="img">
+    <img class="avatar" src="assets/images/avatar.png" alt="img">
     <div class="body text-center d-sm-block d-md-flex">
         <div>
             Hamaza Noah <span class="d-block">Developer</span>
