adding fixes to the targets and welcome components

--- a/src/app/tagets-widget/tagets-widget.component.html
+++ b/src/app/tagets-widget/tagets-widget.component.html
@@ -9,7 +9,7 @@
         <div class="details">
             <span class="fs-14 c-grey">Money</span>
             <span class="d-block mt-5 mb-10 fw-bold">$20.000</span>
-            <div class="progress p-relative">
+            <div class="progress position-relative">
                 <span class="bg-blue blue" style="width: 80%">
                     <span class="bg-blue">80%</span>
                 </span>
@@ -23,7 +23,7 @@
         <div class="details">
             <span class="fs-14 c-grey">Projects</span>
             <span class="d-block mt-5 mb-10 fw-bold">24</span>
-            <div class="progress p-relative">
+            <div class="progress position-relative">
                 <span class="bg-orange orange" style="width: 55%">
                     <span class="bg-orange">55%</span>
                 </span>
@@ -37,7 +37,7 @@
         <div class="details">
             <span class="fs-14 c-grey">Team</span>
             <span class="d-block mt-5 mb-10 fw-bold">12</span>
-            <div class="progress p-relative">
+            <div class="progress position-relative">
                 <span class="bg-green green" style="width: 75%">
                     <span class="bg-green">75%</span>
                 </span>
