--- a/src/app/tagets-widget/tagets-widget.component.scss
+++ b/src/app/tagets-widget/tagets-widget.component.scss
@@ -11,34 +11,37 @@
     margin-bottom: 20px;
     color: $gray-color;
   }
+  .target-row .icon {
+    width: 80px;
+    height: 80px;
+    margin-right: 15px;
+  }
+
+  .details {
+    flex: 1;
+    .progress {
+      height: 4px;
+    }
+  }
+
+  .progress > span {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    span {
+      background-color: royalblue;
+      position: absolute;
+      bottom: 16px;
+      right: -16px;
+      color: white;
+      padding: 2px 5px;
+      border-radius: 6px;
+      font-size: 13px;
+    }
+  }
 }
 
-.targets .target-row .icon {
-  width: 80px;
-  height: 80px;
-  margin-right: 15px;
-}
-.targets .details {
-  flex: 1;
-}
-.targets .details .progress {
-  height: 4px;
-}
-.targets .details .progress > span {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-}
-.targets .details .progress > span span {
-  position: absolute;
-  bottom: 16px;
-  right: -16px;
-  color: white;
-  padding: 2px 5px;
-  border-radius: 6px;
-  font-size: 13px;
-}
 .targets .details .progress > span span::after {
   content: "";
   border-color: transparent;
@@ -49,23 +52,29 @@
   left: 50%;
   transform: translateX(-50%);
 }
+
 .targets .details .progress > .blue span::after {
   border-top-color: var(--blue-color);
 }
+
 .targets .details .progress > .orange span::after {
   border-top-color: var(--orange-color);
 }
+
 .targets .details .progress > .green span::after {
   border-top-color: var(--green-color);
 }
+
 .blue .icon,
 .blue .progress {
   background-color: rgb(0 117 255 / 20%);
 }
+
 .orange .icon,
 .orange .progress {
   background-color: rgb(245 158 11 / 20%);
 }
+
 .green .icon,
 .green .progress {
   background-color: rgb(34 197 94 / 20%);
