--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -17,48 +17,55 @@
     color: $gray-color;
     margin-top: 5px;
   }
-}
 
-.welcome .avatar {
-  width: 64px;
-  height: 64px;
-  padding: 2px;
-  margin-left: 20px;
-  margin-top: -32px;
-  border: 2px;
-  border-radius: 50%;
-  box-shadow: 0 0 5px #eee;
-}
-
-.welcome .body {
-  padding: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
-
-  & > div {
-    flex: 1;
+  .avatar {
+    width: 64px;
+    height: 64px;
+    padding: 2px;
+    margin-left: 20px;
+    margin-top: -32px;
+    border: 2px;
+    border-radius: 50%;
+    border: 2px solid white;
+    box-shadow: 0 0 5px #eee;
   }
 
-  span {
-    display: block;
-    margin-top: 10px;
-    font-size: 14px;
-    color: $gray-color;
+  .body {
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+
+    & > div {
+      flex: 1;
+    }
+
+    span {
+      display: block;
+      margin-top: 10px;
+      font-size: 14px;
+      color: $gray-color;
+    }
+  }
+
+  .visit {
+    margin: 0 15px 15px auto;
+    width: fit-content;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    background-color: $blue-color;
+    transition: 0.3s;
+
+    &:hover {
+      background-color: $blue-alt-color;
+    }
   }
 }
 
-.welcome .visit {
-  margin: 0 15px 15px auto;
-  width: fit-content;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  background-color: $blue-color;
-  transition: 0.3s;
-
-  &:hover {
-    background-color: $blue-alt-color;
+@media (max-width: 575px) {
+  .avatar {
+    text-align: center !important;
   }
 }
 
@@ -73,6 +80,7 @@
 
   .avatar {
     margin-left: 0 !important;
+    text-align: center !important;
   }
 
   .welcome {
