added tweet-statistics component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,6 +19,8 @@
             <app-welcome></app-welcome>
             <app-quick-draft></app-quick-draft>
             <app-tagets-widget></app-tagets-widget>
+            <app-tweet-statistics></app-tweet-statistics>
+            <app-latest-news></app-latest-news>
         </div>
     </div>
 </div>
