--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -89,8 +89,7 @@
 .wraper {
   gap: 20px;
   grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
-  margin-right: 20px;
-  margin-left: 20px;
+  margin: 0 20px 20px 20px
 }
 
 @media (max-width: 767px) {
