--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<div class="welcome bg-white text-sm-center text-md-start d-sm-block d-md-">
+<div class="welcome bg-white text-sm-center text-md-start d-sm-block d-md- h-100">
     <div class="intro d-flex justify-content-between">
         <div>
             <h2 class="m-0">
