added tasks widget component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -21,6 +21,7 @@
             <app-tagets-widget></app-tagets-widget>
             <app-tweet-statistics></app-tweet-statistics>
             <app-latest-news></app-latest-news>
+            <app-tasks-widget></app-tasks-widget>
         </div>
     </div>
 </div>
