added tue top-search-widget-component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -22,6 +22,7 @@
             <app-tweet-statistics></app-tweet-statistics>
             <app-latest-news></app-latest-news>
             <app-tasks-widget></app-tasks-widget>
+            <app-top-search-widget></app-top-search-widget>
         </div>
     </div>
 </div>
