--- a/src/app/latest-news/latest-news.component.html
+++ b/src/app/latest-news/latest-news.component.html
@@ -1,4 +1,4 @@
-<div class="latest-news">
+<div class="latest-news h-100">
   <h2 class="mt-0">Latest News</h2>
   <div class="news-row d-flex align-items-center">
     <img src="../../assets/images/news-01.png" alt="" />
