--- a/src/app/tweet-statistics/tweet-statistics.component.html
+++ b/src/app/tweet-statistics/tweet-statistics.component.html
@@ -1,4 +1,4 @@
-<div class="tickets">
+<div class="tickets h-100">
     <h2 class="mt-0 ">Tickets Statistics</h2>
     <p class="mt-0">Everything About Support Tickets</p>
     <div class="d-flex text-center">
