--- a/src/app/tasks-widget/tasks-widget.component.html
+++ b/src/app/tasks-widget/tasks-widget.component.html
@@ -1,4 +1,4 @@
-<div class="tasks ">
+<div class="tasks h-100">
     <h2 class="mt-0">Latest Tasks</h2>
     <div class="task-row d-flex justify-content-between align-items-center">
       <div class="info">
