--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,6 +23,7 @@
             <app-latest-news></app-latest-news>
             <app-tasks-widget></app-tasks-widget>
             <app-top-search-widget></app-top-search-widget>
+            <app-latest-uploads></app-latest-uploads>
         </div>
     </div>
 </div>
