enhanced the HTML code using angular feature

--- a/src/app/latest-uploads/latest-uploads.component.html
+++ b/src/app/latest-uploads/latest-uploads.component.html
@@ -3,7 +3,7 @@
     <ul class="m-0 p-0">
         <li class="d-flex justify-content-between pb-10 mb-10">
             <div class="d-flex align-center">
-                <img class="mr-10" src="../../assets/images/pdf.svg" alt="" />
+                <img class="mr-10" src="assets/images/pdf.svg" alt="" />
                 <div>
                     <span class="d-block">my-file.pdf</span>
                     <span class="fs-15 c-grey">Elzero</span>
@@ -13,7 +13,7 @@
         </li>
         <li class="d-flex justify-content-between pb-10 mb-10">
             <div class="d-flex align-center">
-                <img class="mr-10" src="../../assets/images/avi.svg" alt="" />
+                <img class="mr-10" src="assets/images/avi.svg" alt="" />
                 <div>
                     <span class="d-block">My-Video-File.avi</span>
                     <span class="fs-15 c-grey">Admin</span>
@@ -23,7 +23,7 @@
         </li>
         <li class="d-flex justify-content-between pb-10 mb-10">
             <div class="d-flex align-center">
-                <img class="mr-10" src="../../assets/images/psd.svg" alt="" />
+                <img class="mr-10" src="assets/images/psd.svg" alt="" />
                 <div>
                     <span class="d-block">My-Psd-File.pdf</span>
                     <span class="fs-15 c-grey">Osama</span>
@@ -33,7 +33,7 @@
         </li>
         <li class="d-flex justify-content-between pb-10 mb-10">
             <div class="d-flex align-center">
-                <img class="mr-10" src="../../assets/images/zip.svg" alt="" />
+                <img class="mr-10" src="assets/images/zip.svg" alt="" />
                 <div>
                     <span class="d-block">My-Zip-File.pdf</span>
                     <span class="fs-15 c-grey">User</span>
@@ -43,7 +43,7 @@
         </li>
         <li class="d-flex justify-content-between pb-10 mb-10">
             <div class="d-flex align-center">
-                <img class="mr-10" src="../../assets/images/dll.svg" alt="" />
+                <img class="mr-10" src="assets/images/dll.svg" alt="" />
                 <div>
                     <span class="d-block">My-DLL-File.pdf</span>
                     <span class="fs-15 c-grey">Admin</span>
@@ -53,7 +53,7 @@
         </li>
         <li class="d-flex justify-content-between">
             <div class="d-flex align-center">
-                <img class="mr-10" src="../../assets/images/eps.svg" alt="" />
+                <img class="mr-10" src="assets/images/eps.svg" alt="" />
                 <div>
                     <span class="d-block">My-Eps-File.pdf</span>
                     <span class="fs-15 c-grey">Designer</span>
