--- a/src/app/top-search-widget/top-search-widget.component.html
+++ b/src/app/top-search-widget/top-search-widget.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="items d-flex justify-content-between">
       <span>Programming</span>
-      <span class="fs-13 btn">220</span>
+      <span class="btn-shape">220</span>
     </div>
     <div class="items d-flex justify-content-between">
       <span>JavaScript</span>
