--- a/src/app/latest-uploads/latest-uploads.component.html
+++ b/src/app/latest-uploads/latest-uploads.component.html
@@ -1,65 +1,65 @@
 <div class="latest-uploads h-100">
     <h2 class="mt-0">Latest Uploads</h2>
     <ul class="m-0 p-0">
-        <li class="d-flex justify-content-between pb-10 mb-10">
-            <div class="d-flex align-center">
-                <img class="mr-10" src="assets/images/pdf.svg" alt="" />
+        <li class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center">
+                <img src="assets/images/pdf.svg" alt="" />
                 <div>
                     <span class="d-block">my-file.pdf</span>
-                    <span class="fs-15 c-grey">Elzero</span>
+                    <span class="name">Elzero</span>
                 </div>
             </div>
-            <div class="bg-eee btn-shape fs-13">2.9mb</div>
+            <div class="">2.9mb</div>
         </li>
-        <li class="d-flex justify-content-between pb-10 mb-10">
-            <div class="d-flex align-center">
-                <img class="mr-10" src="assets/images/avi.svg" alt="" />
+        <li class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center">
+                <img src="assets/images/avi.svg" alt="" />
                 <div>
                     <span class="d-block">My-Video-File.avi</span>
-                    <span class="fs-15 c-grey">Admin</span>
+                    <span class="name">Admin</span>
                 </div>
             </div>
-            <div class="bg-eee btn-shape fs-13">4.9mb</div>
+            <div class="">4.9mb</div>
         </li>
-        <li class="d-flex justify-content-between pb-10 mb-10">
-            <div class="d-flex align-center">
-                <img class="mr-10" src="assets/images/psd.svg" alt="" />
+        <li class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center">
+                <img src="assets/images/psd.svg" alt="" />
                 <div>
                     <span class="d-block">My-Psd-File.pdf</span>
-                    <span class="fs-15 c-grey">Osama</span>
+                    <span class="name">Osama</span>
                 </div>
             </div>
-            <div class="bg-eee btn-shape fs-13">4.5mb</div>
+            <div class="">4.5mb</div>
         </li>
-        <li class="d-flex justify-content-between pb-10 mb-10">
-            <div class="d-flex align-center">
-                <img class="mr-10" src="assets/images/zip.svg" alt="" />
+        <li class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center">
+                <img src="assets/images/zip.svg" alt="" />
                 <div>
                     <span class="d-block">My-Zip-File.pdf</span>
-                    <span class="fs-15 c-grey">User</span>
+                    <span class="name">User</span>
                 </div>
             </div>
-            <div class="bg-eee btn-shape fs-13">8.9mb</div>
+            <div class="">8.9mb</div>
         </li>
-        <li class="d-flex justify-content-between pb-10 mb-10">
-            <div class="d-flex align-center">
-                <img class="mr-10" src="assets/images/dll.svg" alt="" />
+        <li class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center">
+                <img src="assets/images/dll.svg" alt="" />
                 <div>
                     <span class="d-block">My-DLL-File.pdf</span>
-                    <span class="fs-15 c-grey">Admin</span>
+                    <span class="name">Admin</span>
                 </div>
             </div>
-            <div class="bg-eee btn-shape fs-13">4.9mb</div>
+            <div class="">4.9mb</div>
         </li>
-        <li class="d-flex justify-content-between">
-            <div class="d-flex align-center">
-                <img class="mr-10" src="assets/images/eps.svg" alt="" />
+        <li class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center">
+                <img src="assets/images/eps.svg" alt="" />
                 <div>
                     <span class="d-block">My-Eps-File.pdf</span>
-                    <span class="fs-15 c-grey">Designer</span>
+                    <span class="name">Designer</span>
                 </div>
             </div>
-            <div class="bg-eee btn-shape fs-13">8.9mb</div>
+            <div class="">8.9mb</div>
         </li>
     </ul>
 </div>
