Added and styled the last-progress-project component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,6 +24,7 @@
             <app-tasks-widget></app-tasks-widget>
             <app-top-search-widget></app-top-search-widget>
             <app-latest-uploads></app-latest-uploads>
+            <app-last-progress-project></app-last-progress-project>
         </div>
     </div>
 </div>
