--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,22 @@
-<app-dashboard></app-dashboard>
+<div class="page d-flex">
+    <app-sidebar></app-sidebar>
+    <div class="content w-100 overflow-hidden">
+        <div class="head bg-white d-flex align-items-center justify-content-between">
+            <div class="search position-relative">
+                <input type="search" placeholder="Type a Keyword">
+            </div>
+            <div class="icons d-flex align-items-center">
+                <span class="notification position-relative">
+                    <i class="fa-regular fa-bell fa-lg"></i>
+                </span>
+                <img src="assets/images/avatar.png" alt="img">
+            </div>
+        </div>
+        <h1 class="position-relative">
+            Dashboard
+        </h1>
+        <router-outlet>
+            <app-dashboard></app-dashboard>
+        </router-outlet>
+    </div>
+</div>
