--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar position-relative bg-white text-center">
+<div class="sidebar position-relative bg-white text-center h-100">
     <h3 class="position-relative text-center mt-0">Hamza</h3>
     <ul class="p-0 list-unstyled">
         <li>
