--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,44 +2,44 @@
     <h3 class="position-relative text-center mt-0">Hamza</h3>
     <ul class="p-0 list-unstyled">
         <li>
-            <a class="active d-flex align-items-center text-dark" href="#"><i
+            <a class="active d-flex align-items-center text-dark" routerLink="dashboard"><i
                     class="fa-regular fa-chart-bar fa-fw"></i>
                 <span class="hide-mobile">Dashboard</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" href="#">
+            <a class="d-flex align-items-center text-dark" routerLink="settings">
                 <i class="fa-sharp fa-solid fa-gear"></i>
                 <span class="hide-mobile">Settings</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" href="#"><i class="fa-regular fa-user"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-regular fa-user"></i>
                 <span class="hide-mobile">Profile</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" href="#"><i class="fa-solid fa-diagram-project"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-solid fa-diagram-project"></i>
                 <span class="hide-mobile">Projects</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" href="#"><i class="fa-solid fa-graduation-cap"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-solid fa-graduation-cap"></i>
                 <span class="hide-mobile">Courses</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" href="#"><i class="fa-solid fa-user-group"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-solid fa-user-group"></i>
                 <span class="hide-mobile">Friends</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" href="#"><i class="fa-regular fa-file"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-regular fa-file"></i>
                 <span class="hide-mobile">Files</span>
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" href="#"><i class="fa-solid fa-credit-card"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-solid fa-credit-card"></i>
                 <span class="hide-mobile">Plans</span>
             </a>
         </li>
