--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,6 @@
         <h1 class="position-relative">
             Dashboard
         </h1>
-        <router-outlet>
-        </router-outlet>
+        <router-outlet></router-outlet>
     </div>
 </div>
