--- a/src/app/profile-page/profile-page.component.scss
+++ b/src/app/profile-page/profile-page.component.scss
@@ -1,121 +1,184 @@
+@import "../../assets/variables.scss";
+
+.profile-page {
+  margin: 20px;
+  .overview {
+    border-radius: 10px;
+    .avatar-box {
+      padding: 20px;
+    }
+
+    .avatar-box img {
+      margin-bottom: 10px;
+    }
+
+    h3 + p {
+      margin-top: 10px;
+      color: $gray-color;
+    }
+
+    .level {
+      border-radius: 6px;
+      background-color: #eee;
+    }
+
+    .level span {
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      background-color: $blue-color;
+      border-radius: 6px;
+    }
+
+    .rating {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      i{
+        // c-orange fs-13
+        color: $orang-color;
+        font-size: 13px; 
+      }
+    }
+  }
+}
+
 /* Start Profile Page */
 @media (max-width: 767px) {
-    .profile-page .overview {
-      flex-direction: column;
-    }
+  .profile-page .overview {
+    flex-direction: column;
   }
+}
+
+.profile-page .avatar-box {
+  width: 300px;
+}
+
+@media (min-width: 768px) {
   .profile-page .avatar-box {
-    width: 300px;
+    border-right: 1px solid #eee;
   }
-  @media (min-width: 768px) {
-    .profile-page .avatar-box {
-      border-right: 1px solid #eee;
-    }
-  }
-  .profile-page .avatar-box > img {
-    width: 120px;
-    height: 120px;
-  }
-  .profile-page .avatar-box .level {
-    height: 6px;
-    overflow: hidden;
-    margin: auto;
-    width: 70%;
-  }
-  .profile-page .avatar-box .level span {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    background-color: var(--blue-color);
-    border-radius: 6px;
-  }
-  .profile-page .info-box .box {
-    flex-wrap: wrap;
-    border-bottom: 1px solid #eee;
-    transition: 0.3s;
-  }
-  .profile-page .info-box .box:hover {
-    background-color: #f9f9f9;
-  }
-  .profile-page .info-box .box > div {
-    min-width: 250px;
-    padding: 10px 0 0;
-  }
-  .profile-page .info-box h4 {
-    font-weight: normal;
-  }
-  /* Start Training Code */
+}
+
+.profile-page .avatar-box > img {
+  width: 120px;
+  height: 120px;
+}
+
+.profile-page .avatar-box .level {
+  height: 6px;
+  overflow: hidden;
+  margin: auto;
+  width: 70%;
+}
+
+.profile-page .info-box .box {
+  flex-wrap: wrap;
+  border-bottom: 1px solid #eee;
+  transition: 0.3s;
+}
+
+.profile-page .info-box .box:hover {
+  background-color: #f9f9f9;
+}
+
+.profile-page .info-box .box > div {
+  min-width: 250px;
+  padding: 10px 0 0;
+}
+
+.profile-page .info-box h4 {
+  font-weight: normal;
+}
+
+/* Start Training Code */
+.profile-page .info-box .toggle-switch {
+  height: 20px;
+}
+
+@media (max-width: 767px) {
   .profile-page .info-box .toggle-switch {
-    height: 20px;
+    margin: auto;
   }
-  @media (max-width: 767px) {
-    .profile-page .info-box .toggle-switch {
-      margin: auto;
-    }
+}
+
+.profile-page .info-box .toggle-switch::before {
+  width: 12px;
+  height: 12px;
+  font-size: 8px;
+}
+
+.profile-page .info-box .toggle-checkbox:checked + .toggle-switch::before {
+  left: 62px;
+}
+
+/* End Training Code */
+@media (max-width: 767px) {
+  .profile-page .other-data {
+    flex-direction: column;
   }
-  .profile-page .info-box .toggle-switch::before {
-    width: 12px;
-    height: 12px;
-    font-size: 8px;
+}
+
+.profile-page .skills-card {
+  flex-grow: 1;
+}
+
+.profile-page .skills-card ul li {
+  padding: 15px 0;
+}
+
+.profile-page .skills-card ul li:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+
+.profile-page .skills-card ul li span {
+  display: inline-flex;
+  padding: 4px 10px;
+  background-color: #eee;
+  border-radius: 6px;
+  font-size: 14px;
+}
+
+.profile-page .skills-card ul li span:not(:last-child) {
+  margin-right: 5px;
+}
+
+.profile-page .activities {
+  flex-grow: 2;
+}
+
+.profile-page .activity:not(:last-of-type) {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+
+.profile-page .activity img {
+  width: 64px;
+  height: 64px;
+  margin-right: 10px;
+}
+
+@media (min-width: 768px) {
+  .profile-page .activity .date {
+    margin-left: auto;
+    text-align: right;
   }
-  .profile-page .info-box .toggle-checkbox:checked + .toggle-switch::before {
-    left: 62px;
+}
+
+@media (max-width: 767px) {
+  .profile-page .activity {
+    flex-direction: column;
   }
-  /* End Training Code */
-  @media (max-width: 767px) {
-    .profile-page .other-data {
-      flex-direction: column;
-    }
-  }
-  .profile-page .skills-card {
-    flex-grow: 1;
-  }
-  .profile-page .skills-card ul li {
-    padding: 15px 0;
-  }
-  .profile-page .skills-card ul li:not(:last-child) {
-    border-bottom: 1px solid #eee;
-  }
-  .profile-page .skills-card ul li span {
-    display: inline-flex;
-    padding: 4px 10px;
-    background-color: #eee;
-    border-radius: 6px;
-    font-size: 14px;
-  }
-  .profile-page .skills-card ul li span:not(:last-child) {
-    margin-right: 5px;
-  }
-  .profile-page .activities {
-    flex-grow: 2;
-  }
-  .profile-page .activity:not(:last-of-type) {
-    border-bottom: 1px solid #eee;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-  }
+
   .profile-page .activity img {
-    width: 64px;
-    height: 64px;
-    margin-right: 10px;
+    margin-right: 0;
+    margin-bottom: 15px;
   }
-  @media (min-width: 768px) {
-    .profile-page .activity .date {
-      margin-left: auto;
-      text-align: right;
-    }
+
+  .profile-page .activity .date {
+    margin-top: 15px;
   }
-  @media (max-width: 767px) {
-    .profile-page .activity {
-      flex-direction: column;
-    }
-    .profile-page .activity img {
-      margin-right: 0;
-      margin-bottom: 15px;
-    }
-    .profile-page .activity .date {
-      margin-top: 15px;
-    }
-  }
-  /* End Profile Page */
+}
+
+/* End Profile Page */
