--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-regular fa-user"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="profile"><i class="fa-regular fa-user"></i>
                 <span class="hide-mobile">Profile</span>
             </a>
         </li>
